# social-llm

./: .env.example  .gitignore  pyproject.toml
.claude/: settings.local.json
notebooks/: 01_seed_exploration.ipynb  02_profile_collection.ipynb  03_scoring.ipynb  04_analysis.ipynb
src/social_llm/: config.py  models.py
src/social_llm/llm/: client.py  prompts.py
src/social_llm/scoring/: pipeline.py
src/social_llm/threads/: client.py
