[project]
name = "social-llm"
version = "0.1.0"
description = "Social media analysis with LLM-based psychological trait scoring"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "openai>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tenacity>=9.0",
    "tqdm>=4.0",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scipy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/social_llm"]
